--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
-    "@types/uuid": "^8.0.0"
+    "@types/uuid": "^8.0.0",
+    "ts-jest": "^26.1.1"
   }
 }
