--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "styled-components": "^5.1.1",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^8.0.0",
